# tempular

./: .dockerignore  README.md
analytics/: .env  Cargo.toml  dev.dockerfile
analytics/src/: analytics.rs  config.rs  consumer.rs  error.rs  errors.rs  logging.rs  main.rs  messaging.rs  shutdown.rs  traits.rs  websocket.rs
docker/: dev.docker-compose.yml
rabbitmq/: rabbitmq.conf
