[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
color-eyre = "0.6.3"
config = "0.15.7"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-lite = "2.6.0"
futures-util = "0.3.31"
lapin = "2.5.0"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockall = "0.13.1"
num_cpus = "1.16.0"
proptest = "1.6.0"
rand = "0.9.0"
